--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 * {
     background-color: white;
+    font-family: 'Futura', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    line-height: 1.5;
+    font-size: 20px;
 }
 
 .header-text {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
     font-size: 32px;
 }
@@ -19,10 +21,23 @@
 
 .link-list {
     text-align: center;
-    list-style-type: none;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 .link-list .link {
     text-decoration: none;
+    font-weight: 500;
+}
+
+.credits .link {
+    text-align: left;
+    position: fixed;
+    bottom: 0;
+}
+.back {
+    text-align: left;
+    position: fixed;
+    bottom: 0;
 }
